--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,9 @@
 androidGradlePlugin = "7.4.2"
 ksp = "1.8.10-1.0.9"
 kotlin = "1.8.10"
-core-ktx = "1.8.0"
+core-ktx = "1.10.0"
+lifecycle-runtime-ktx = "2.6.1"
+activity-compose = "1.5.1"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.3"
 espresso-core = "3.4.0"
@@ -12,16 +14,22 @@ material = "1.5.0"
 constraintlayout = "2.1.3"
 navigation-fragment-ktx = "2.5.2"
 navigation-ui-ktx = "2.5.2"
+androidxNavigation = "2.5.3"
 ktor = "2.2.4"
 moshi="1.14.0"
 androidxRoom="2.5.0"
 hilt = "2.44"
 joda-time = "2.9.9"
 
+androidxComposeBom = "2023.01.00"
+
 [libraries]
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
+lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx"}
+activity-compose = {group = "androidx.activity", name =" activity-compose", version.ref = "activity-compose"}
+
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
@@ -31,9 +39,24 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation-fragment-ktx" }
 navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-ui-ktx" }
 androidx-compose-ktx-compiler = {group = "androidx.compose", name = "compose-ktx-compiler", version.ref = "androidxComposeCompiler"}
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigation" }
+
+
+androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "androidxComposeBom" }
+androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
+androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3"}
+androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
+androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
+androidx-compose-ui-util = { group = "androidx.compose.ui", name = "ui-util" }
+androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+
+
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "androidxRoom" }
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "androidxRoom" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "androidxRoom" }
+
 ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor"}
 ktor-client-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor"}
 ktor-client-logging = { group = "io.ktor", name = "ktor-client-logging", version.ref = "ktor"}
