--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,7 +20,8 @@ moshi="1.14.0"
 androidxRoom="2.5.0"
 hilt = "2.44"
 joda-time = "2.9.9"
-
+androixPagingCommon = "3.1.1"
+androixPagingCompose = "1.0.0-alpha14"
 androidxComposeBom = "2023.01.00"
 
 [libraries]
@@ -38,9 +39,10 @@ material = { group = "com.google.android.material", name = "material", version.r
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation-fragment-ktx" }
 navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-ui-ktx" }
-androidx-compose-ktx-compiler = {group = "androidx.compose", name = "compose-ktx-compiler", version.ref = "androidxComposeCompiler"}
+androidx-compose-ktx-compiler = { group = "androidx.compose", name = "compose-ktx-compiler", version.ref = "androidxComposeCompiler"}
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigation" }
-
+androidx-paging-common-ktx = { group = "androidx.paging", name = "paging-common-ktx", version.ref = "androixPagingCommon" }
+androidx-paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "androixPagingCompose" }
 
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "androidxComposeBom" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
